--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "~TODO~",
+  "name": "svelte-app",
   "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview",
     "lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "format": "prettier --write --plugin-search-dir=. .",
+    "prepare": "yarn build && yarn vite-workaround && yarn smui-theme-dark",
+    "vite-workaround": "node _helper/vite-workaround.js",
+    "smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark",
+    "websocket": "nodemon websocket-server.js"
   },
   "devDependencies": {
     "@sveltejs/kit": "next",
@@ -15,12 +20,24 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "nodemon": "^2.0.7",
     "prettier": "~2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
+    "smui-theme": "^4.2.0",
     "svelte": "^3.34.0",
-    "svelte-preprocess": "^4.0.0",
+    "svelte-preprocess": "^4.7.3",
+    "ts-node": "^9.1.1",
     "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "websocket": "^1.0.34"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@smui/button": "^4.2.0",
+    "@smui/card": "^4.2.0",
+    "@smui/fab": "^4.2.0",
+    "axios": "^0.21.1",
+    "smelte": "^1.1.5",
+    "svelte-material-ui": "^4.2.0"
+  }
 }
